Adding benchmarks for Any and SemiAny
Summary:
Added benchmark tests for Any and SemiAny.

Benchmark                                                                     (protocol)  (size)  (type)   Mode  Cnt        Score        Error   Units
ThriftAnyBenchmarks.benchmarkAnyDeserialize                                    TBinary   small     uri  thrpt   20  3366022.548 ± 179085.814   ops/s
ThriftAnyBenchmarks.benchmarkAnyDeserialize                                    TBinary   small    hash  thrpt   20  3630643.942 ± 231047.677   ops/s
ThriftAnyBenchmarks.benchmarkAnyDeserialize                                    TBinary  medium     uri  thrpt   20   987305.013 ±  27128.745   ops/s
ThriftAnyBenchmarks.benchmarkAnyDeserialize                                    TBinary  medium    hash  thrpt   20   972795.314 ±  27428.514   ops/s
ThriftAnyBenchmarks.benchmarkAnyDeserialize                                   TCompact   small     uri  thrpt   20  3127242.775 ± 187444.595   ops/s
ThriftAnyBenchmarks.benchmarkAnyDeserialize                                   TCompact   small    hash  thrpt   20  3303096.635 ±  58351.444   ops/s
...
ThriftAnyBenchmarks.benchmarkAnySerialize                                      TBinary   small     uri  thrpt   20  2366187.339 ±  34847.794   ops/s
ThriftAnyBenchmarks.benchmarkAnySerialize                                      TBinary   small    hash  thrpt   20  2226112.192 ±  28448.668   ops/s
ThriftAnyBenchmarks.benchmarkAnySerialize                                      TBinary  medium     uri  thrpt   20  1232482.493 ±  67518.597   ops/s
ThriftAnyBenchmarks.benchmarkAnySerialize                                      TBinary  medium    hash  thrpt   20  1211990.375 ±  30276.930   ops/s
...

Reviewed By: robertroeser

Differential Revision: D42193530

fbshipit-source-id: 6fac35cc4190cdc93a14a97ca3d6ce77271a6f24